22.nov (ws)
      - added patch from Miwarre to extend frame properties
21.nov (db)
      - fix #8005: Dots too close on right side of "end-start repeat" barline
      - normal five-line staff for Temple blocks
      - copy edits to Page Settings dialog
19.nov (ws)
      - fix #7835: converter mode crash
      - fixes from Miwarre:
            #7983: any edit to text style set sizeIsSpatiumDependent true
            #7986: text styles backward compatibility issue
            #7709: Clutter after end-start repeat sign
            #7017: Chord names does not support "H" name as chord
16.nov (ws)
      - fix crash when trying to enter lyrics on voice 2
14.nov (ws)
      - add tempo text template to text palette
      - fix: tie disappeared when first note was beamed
      - add patch from Miwarre which fixes #7338: wrong naturals in key signatures
10.nov (ws)
      - fix #7882: Transposing a score shouldn't transpose a drum staff
      - added "instruments-band.xml" from ndwinton
      - save title and copyright as meta data when creating new score
      - do not create measure rests if nominal len of measure is different from
        actual len
      - when creating new scores with a pickup measure, also adjust the len
        of the last measure so that pickup measure + last measure = normal measure
9.nov (lv)
      - fix MusicXML import of <harmony>
      (ws)
      - entering lyrics entry mode also by selecting lyrics + Ctrl+L
      - up/down moves lyrics to next/previous verse (if slot is empty)
      - if lyrics is selected, cursor next/previous move to next/prev lyrics
      - fix: hide cursor after play ends
      - fix: clef changes are not always saved
      - fix: cursor left/right to next/prev. lyrics in lyrics editing mode
      - fix: delete verse > 1 of lyrics
      - fix: changing instrument name in part properties did not work
      - fix creation of new scores with pickup measure